feat(persistence): add db layer
